LaTex: minor corrections and improvements

--- a/LaTex/apendices/apendice01.tex
+++ b/LaTex/apendices/apendice01.tex
@@ -3,7 +3,7 @@
 
 \chapter{Detalles Matemáticos Adicionales}\label{ap:apendiceA}
 
-En este apéndice se muestran las demostraciones del Lema~\ref{lema:raro-clasificación-gd}, extraída de~\cite{Soudry2024} y de la Proposición~\ref{prop:non-conexity}.
+En este apéndice se muestran las demostraciones del Lema~\ref{lema:raro-clasificación-gd}, extraída de~\cite{Soudry2024}, y de la Proposición~\ref{prop:non-conexity}.
 
 \textbf{Lema}~\ref{lema:raro-clasificación-gd}. Sea $\mathcal{L}(w)$ una función $\beta$-suave no negativa. Si $\eta < \frac{2}{\beta}$, entonces, para cualquier $w_0$ y utilizando el método del descenso de gradiente dado por:
 
