--- a/LaTex/apendices/apendice04.tex
+++ b/LaTex/apendices/apendice04.tex
@@ -3,9 +3,9 @@
 
 \chapter{Irregularidades en la Dinámica del Error}\label{ap:apendiceD}
 
-En este apéndice analizamos en detalle los saltos bruscos que se producen tanto en el error de entrenamiento como en el de test al aumentar el número de épocas de un determinado modelo, intentando proporcionar una explicación para los mismos.
+En esta sección complementaria analizamos en detalle los saltos bruscos que se producen tanto en el error de entrenamiento como en el de test al aumentar el número de épocas de un determinado modelo, intentando proporcionar una explicación para los mismos.
 
-Nos centramos en la gráfica de la Figura~\ref{fig:model-epoch3CNNCIFAR10}, donde estos picos en el error son más sobresalientes (no obstante, la Figura~\ref{fig:epoch-wiseMNIST} muestra un comportamiento similar al emplear un subconjunto de MNIST y la arquitectura $2$NN, particularmente al utilizar modelos de gran tamaño). A partir de esta representación, se analiza el \textit{epoch-wise double descent} en dos modelos que la conforman: uno infraparametrizado, ubicado antes del umbral de interpolación, y otro sobreparametrizado, situado después de dicho umbral (véase Figura~\ref{fig:epoch-wise-bruscos1}).
+Nos centramos en la gráfica de la Figura~\ref{fig:model-epoch3CNNCIFAR10}, donde estas colinas en el error son más sobresalientes (no obstante, la Figura~\ref{fig:epoch-wiseMNIST} muestra un comportamiento similar al emplear un subconjunto de MNIST y la arquitectura $2$NN, particularmente al utilizar modelos de gran capacidad). A partir de esta representación, se analiza el \textit{epoch-wise double descent} en dos modelos que la conforman: uno infraparametrizado, ubicado antes del umbral de interpolación, y otro sobreparametrizado, situado después de dicho umbral (véase Figura~\ref{fig:epoch-wise-bruscos1}).
 
 \begin{figure}[h]
     \centering
@@ -23,13 +23,13 @@ Nos centramos en la gráfica de la Figura~\ref{fig:model-epoch3CNNCIFAR10}, dond
         \caption{A la izquierda, se muestra la pérdida en entrenamiento y test, y a la derecha, el error en entrenamiento y test para un modelo $3$CNN sobreparametrizado ($k=60$) sobre el subconjunto CIFAR$10$[$25000/5000$], con $20\%$ de ruido añadido y un \text{batch size} de $128$. Se aprecian variaciones abruptas tanto en la gráfica de la pérdida como en la del error.}\label{fig:epoch-wise3CNNoverparameterized}
     \end{subfigure}
     
-    \caption[Comparativa \textit{epoch-wise double descent} entre un modelo infraparametrizado y uno sobreparametrizado en el que aparecen picos significativos en el error.]{Comparativa \textit{epoch-wise double descent} entre un modelo infraparametrizado, donde no se observa el doble descenso, y un modelo sobreparametrizado, en el que este efecto sí se manifiesta y aparecen picos significativos en el error.}\label{fig:epoch-wise-bruscos1}
+    \caption[Comparativa \textit{epoch-wise double descent} entre un modelo infraparametrizado y uno sobreparametrizado en el que aparecen picos significativos en el error.]{Comparativa \textit{epoch-wise double descent} entre un modelo infraparametrizado, donde no se observa el DDD, y un modelo sobreparametrizado, en el que este comportamiento sí se manifiesta y aparecen colinas significativas en el error.}\label{fig:epoch-wise-bruscos1}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.65\textwidth]{img/experiments/epoch-wiseMNIST.png}
-    \caption[Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN.]{Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN sobre el subconjunto MNIST[$4000/1000$] con $10$\% de ruido añadido y entrenadas durante $5000$ épocas. Se observan repuntes en la curva del error, los cuales se atenúan progresivamente a medida que se avanza en el entrenamiento. Descamos también que dichos picos tienden a ser menos pronunciados cuando el tamaño del modelo es mayor.}\label{fig:epoch-wiseMNIST}
+    \caption[Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN.]{Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN sobre el subconjunto MNIST[$4000/1000$], con $10$\% de ruido añadido y entrenadas durante $5000$ épocas. Se observan repuntes en la curva del error, los cuales se atenúan progresivamente a medida que se avanza en el entrenamiento. Descamos también que dichos picos tienden a ser menos pronunciados cuando el tamaño del modelo es mayor.}\label{fig:epoch-wiseMNIST}
 \end{figure}
 
 Para intentar dar una explicación coherente a la conducta, ciertamente peculiar, que se observa en estas gráficas, recordemos algunos de los resultados presentados en la Sección~\ref{sec:optimizacion-zona-sobreparametrizada}. En la zona infraparametrizada, sabemos que los mínimos locales suelen estar aislados, lo que provoca que el paisaje de la función de pérdida en sus alrededores sea localmente convexo (véase imagen izquierda de la Figura~\ref{fig:localglobalminima}).
@@ -56,11 +56,11 @@ A partir de estos resultados, podemos inferir que el algoritmo de optimización,
 
 Además, otro hecho relevante es que la magnitud de estos saltos disminuye progresivamente, lo que sugiere que el modelo, al buscar nuevos mínimos globales, tiende a seleccionar un tipo de soluciones frente a otras. Esta respuesta del modelo puede asociarse al hecho de que, entre todas las soluciones posibles, busca aquella que sea más simple, lo cual, como se ha observado en experimentos previos y en la parte teórica, suele ser una solución que generaliza bien.
 
-La pregunta ahora sería por qué hemos observado estos resultados, cuando no se muestran de manera prominente en la literatura científica. En primer lugar, en los estudios que presentan gráficas de error con el fenómeno del doble descenso, generalmente se utilizan arquitecturas que incluyen conexiones residuales. Este tipo de arquitecturas, según lo demuestran Li et al.~\cite{Li2018}, no presentan paisajes de la función de pérdida multimodales. En cambio, exhiben zonas planas alrededor de los mínimos, impidiendo los saltos bruscos observados en nuestro caso (véase imagen derecha de la Figura~\ref{fig:landscapes}). Así, los mínimos globales se asemejan a los mínimos locales de las zonas infraparametrizadas, lo que impide que el algoritmo de optimización escape de ellos.
+La pregunta ahora sería por qué hemos observado estos resultados, cuando no se muestran de manera prominente en la literatura científica. En primer lugar, en los estudios que presentan gráficas de error para el \textit{Deep Double Descent}, generalmente se utilizan arquitecturas que incluyen conexiones residuales. Este tipo de arquitecturas, según lo demuestran Li et al.~\cite{Li2018}, no presentan paisajes de la función de pérdida tan caóticos (multimodales). En cambio, exhiben zonas planas alrededor de los mínimos, impidiendo los saltos bruscos observados en nuestro caso (véase imagen derecha de la Figura~\ref{fig:landscapes}). Así, los mínimos globales de las arquitecturas con conexiones residuales se asemejan a los mínimos locales de las zonas infraparametrizadas, lo que impide que el algoritmo de optimización escape de ellos.
 
 Por otra parte, siguiendo los distintos resultados presentados en la Sección~\ref{subsec:model-epoch-wise}, podemos observar que el aumento en el número de parámetros en comparación con el número de ejemplos de entrenamiento, junto con el uso de un conjunto de entrenamiento más difícil (en nuestro caso, conjuntos con imágenes en formato RGB), favorecen la aparición de estas colinas en las gráficas de error.
 
-Finalmente, podemos concluir que, a medida que avanzan las épocas de entrenamiento, estos picos se vuelven cada vez menos notables, posiblemente porque el modelo encuentra cada vez soluciones más simples. Esto sugiere que, si se entrenara durante un mayor número de épocas de entrenamiento, estos picos podrían llegar a ser prácticamente imperceptibles o incluso desaparecer por completo.
+Finalmente, podemos concluir que, a medida que avanzan las épocas de entrenamiento, estas oscilaciones se vuelven cada vez menos notables, posiblemente porque el modelo encuentra cada vez soluciones más simples. Esto sugiere que, si se entrenara durante un mayor número de épocas de entrenamiento, estos picos podrían llegar a ser prácticamente imperceptibles o incluso desaparecer por completo.
 
 \endinput
 %------------------------------------------------------------------------------------
