--- a/LaTex/apendices/apendice03.tex
+++ b/LaTex/apendices/apendice03.tex
@@ -14,18 +14,20 @@ Para los valores de los hiperparámetros, se utiliza una tasa de aprendizaje de 
     \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{img/experiments/LegendreFeaturesGD_DDD.png}
-        \caption{Aproximación de Legendre, donde se observa cómo se manifiesta el doble descenso.}\label{fig:LegendreFeaturesGD_DDD}
+        \caption{Aproximación de Legendre, donde se observa cómo se manifiesta el fenómeno.}\label{fig:LegendreFeaturesGD_DDD}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{img/experiments/PolyFeaturesGD_DDD.png}
-        \caption{Aproximación clásica, donde se observa cómo no se manifiesta el doble descenso.}\label{fig:PolyFeaturesGD_DDD}
+        \caption{Aproximación clásica, donde se observa cómo no se manifiesta el fenómeno.}\label{fig:PolyFeaturesGD_DDD}
     \end{subfigure}
-    \caption[Error en entrenamiento y test para las aproximaciones de Legendre y clásica utilizando el GD.]{Error en entrenamiento y test para las aproximaciones de Legendre y clásica utilizando el GD.}\label{fig:aproximaciones-gd}
+    \caption[Error en entrenamiento y test para las bases de Legendre y clásica utilizando el GD.]{Error en entrenamiento y test para las bases de Legendre y clásica utilizando el GD. Se observa la aparición del \textit{Deep Double Descent} al emplear la base de Legendre en ambos errores. En contraste, para la base polinomial clásica no se evidencia, aunque el error de test se estabiliza en un valor relativamente bajo.}\label{fig:aproximaciones-gd}
 \end{figure}
 
-La Figura~\ref{fig:aproximaciones-gd} muestra que los resultados obtenidos al utilizar el GD son similares a los obtenidos mediante la pseudoinversa (véase el apartado~\ref{subsubsec:funcion-lineal}, donde se manifiesta el doble descenso para la base de Legendre y no para la base polinomial clásica), con la salvedad de que el error de entrenamiento es mayor al emplear GD y no llega a ser nulo, aunque es bastante cercano.. Esto se debe a que, en el caso del GD, no estamos resolviendo de manera exacta una ecuación, sino que simplemente estamos aproximando la solución mediante un proceso iterativo, el cual requiere más tiempo para alcanzar un valor muy cercano a cero.
+La Figura~\ref{fig:aproximaciones-gd} muestra que los resultados obtenidos al utilizar el GD son similares a los obtenidos mediante la pseudoinversa (véase el apartado~\ref{subsubsec:funcion-lineal}, donde se manifiesta el DDD para la base de Legendre y no para la base polinomial clásica), con la salvedad de que el error de entrenamiento es mayor al emplear GD y no llega a ser nulo, aunque es bastante cercano a cero. Esto se debe a que, en este caso, no estamos resolviendo de manera exacta una ecuación, sino que simplemente estamos aproximando la solución mediante un proceso iterativo, el cual requiere más tiempo para alcanzar la convergencia.
+
+No obstante, ambas gráficas presentan errores de prueba menores que los mostrados en el apartado~\ref{subsubsec:funcion-lineal}, lo que sugiere que, antes de la convergencia total del GD hacia la solución dada por la pseudoinversa, el descenso de gradiente se queda con soluciones que pueden generalizar mejor que la propia solución de norma mínima para ese grado de complejidad.
 
 Como conclusión, se evidencia que, al emplear un gran tamaño de \textit{batch} y suficiente tiempo de entrenamiento (número de épocas), el descenso de gradiente tiende a aproximarse hacia la solución analítica que ofrece la pseudoinversa, tal y como se ha detallado (bajo ciertas condiciones) en la Subsección~\ref{subsec:problema-regresion}, y como también se expone en el trabajo de Lee et al.~\cite{Lee2016}.
 
