--- a/LaTex/glosario_mates.tex
+++ b/LaTex/glosario_mates.tex
@@ -5,8 +5,9 @@
 \addcontentsline{toc}{chapter}{Glosario matemático} % Añade el glosario a la tabla de contenidos
 
 \begin{description} 
-  \item[$\mathbb{R}$] Conjunto de números reales.
-  \item[$\mathbb{N}$] Conjunto de números naturales.
+  \item[$\mathbb{R}$] Conjunto de los números reales.
+  \item[$\mathbb{R_{+}}$] Conjunto de los números reales positivos.
+  \item[$\mathbb{N}$] Conjunto de los números naturales.
   \item[i.d.d.] Independientes e idénticamente distribuidas.
   \item[${\mathbb{E}[X]}$] Esperanza de la variable aleatoria $X$.
   \item[${\mathbb{E}_{\mathcal{K}}[X]}$] Esperanza de la variable aleatoria $X$ con respecto al conjunto $\mathcal{K}$.
